--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
         <div class="content">
             <p>I am currently studying software development and <br> I am looking for an internship to learn more about <br> front-end development.</p><br>
 
-            <p>Earlier studies I Have Vocational Qualification in Business (2017) and after that I started working in sales and customer services so I have experience to work with small and large size teams.</p><br>
+            <p>Earlier studies I have Vocational Qualification in Business (2017) and after that I started working in sales and customer services so I have experience to work with small and large size teams.</p><br>
 
             <p>Click this button if you have anything to ask!  </p>
         </div>
